--- a/.github/workflows/eurcopscraper.yaml
+++ b/.github/workflows/eurcopscraper.yaml
@@ -29,8 +29,8 @@ jobs:
         run: sudo apt-get update
         
       - name: Install libcurl4
-        run: sudo apt-get install libcurl4-openssl-dev
-
+        run: sudo apt-get install libcurl4-openssl-dev build-essential
+    
       # https://github.com/r-lib/actions
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
