--- a/.github/workflows/eurcopscraper.yaml
+++ b/.github/workflows/eurcopscraper.yaml
@@ -33,6 +33,8 @@ jobs:
     
       # https://github.com/r-lib/actions
       - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.4.3'
       - uses: r-lib/actions/setup-renv@v2
       - uses: quarto-dev/quarto-actions/setup@v2
 
